--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -103,40 +103,7 @@ layout: default
 						<ul class="list-inline">
 
 							<!-- add CSDN  -->
-							{% if site.csdn_username %}
-		                        <li>
-		                            <a target="_blank" href="https://blog.csdn.net/{{ site.csdn_username }}">
-		                                <span class="fa-stack fa-lg">
-		                                    <i class="fa fa-circle fa-stack-2x"></i>
-		                                    <i class="fa  fa-stack-1x fa-inverse">C</i>
-		                                </span>
-		                            </a>
-		                        </li>
-		                    {% endif %}
 
-							<!-- add zhihu -->
-							{% if site.zhihu_username %}
-								<li>
-									<a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
-										<span class="fa-stack fa-lg">
-											<i class="fa fa-circle fa-stack-2x"></i>
-											<i class="fa  fa-stack-1x fa-inverse">知</i>
-										</span>
-									</a>
-								</li>
-							{% endif %}
-
-							<!-- add FaceBook -->
-							{% if site.facebook_username %}
-								<li>
-									<a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
-										<span class="fa-stack fa-lg">
-											<i class="fa fa-circle fa-stack-2x"></i>
-											<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-										</span>
-									</a>
-								</li>
-							{% endif %}
 
 							<!-- add Github -->
 							{% if site.github_username %}
@@ -148,6 +115,16 @@ layout: default
 										</span>
 									</a>
 								</li>
+							{% endif %}
+							{% if site.bilibili_username %}
+									<li>
+											<a target="_blank" href="https://space.bilibili.com/{{ site.github_username }}">
+													<span class="fa-stack fa-lg">
+															<i class="fa fa-circle fa-stack-2x"></i>
+															<i class="fa fa-bilibili fa-stack-1x fa-inverse"></i>
+													</span>
+											</a>
+									</li>
 							{% endif %}
 
 						</ul>
@@ -169,7 +146,7 @@ layout: default
 					</ul>
 				{% endif %}
 			</div>
-			
+
 		{% endif %}
 	</div>
 </div>
