--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,16 @@
                             </a>
                         </li>
                     {% endif %}
+                    {% if site.bilibili_username %}
+                        <li>
+                            <a target="_blank" href="https://space.bilibili.com/{{ site.github_username }}">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-bilibili fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
