--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,10 +18,10 @@
                     {% endif %}
                     {% if site.bilibili_username %}
                         <li>
-                            <a target="_blank" href="https://space.bilibili.com/{{ site.github_username }}">
+                            <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-bilibili fa-stack-1x fa-inverse"></i>
+                                    <i class="fa fa-youtube-play fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
