--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -109,7 +109,65 @@ layout: default
 				<!-- Gitalk end -->
 
 			</div>
-
+			<!--引入验证插件 -->
+			<style>
+.vaptcha-init-main {
+    display: table;
+    width: 100%;
+    height: 100%;
+    background-color: #eeeeee;
+}
+.vaptcha-init-loading {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+​
+.vaptcha-init-loading > a {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border: none;
+}
+​
+.vaptcha-init-loading > a img {
+    vertical-align: middle;
+}
+​
+.vaptcha-init-loading .vaptcha-text {
+    font-family: sans-serif;
+    font-size: 12px;
+    color: #cccccc;
+    vertical-align: middle;
+}
+</style>
+<!-- 点击式按钮建议高度介于36px与46px  -->
+<div id="vaptchaContainer" style="width: 300px;height: 36px;">
+<!--vaptcha-container是用来引入VAPTCHA的容器，下面代码为预加载动画，仅供参考-->
+<div class="vaptcha-init-main">
+    <div class="vaptcha-init-loading">
+    <a href="/" target="_blank">
+        <img src="https://r.vaptcha.net/public/img/vaptcha-loading.gif" />
+    </a>
+    <span class="vaptcha-text">VAPTCHA is initializing...</span>
+    </div>
+</div>
+</div>
+<script src="https://v-cn.vaptcha.com/v3.js"></script>
+<script>
+vaptcha({
+    //配置参数
+    vid: '60d2a8f3b5b135863648dac2', // 验证单元id
+    type: 'click', // 展现类型 点击式
+    container: '#vaptchaContainer', // 按钮容器，可为Element 或者 selector
+​
+    ... //其他配置参数省略
+}).then(function (vaptchaObj) {
+    vaptchaObj.render()// 调用验证实例 vaptchaObj 的 render 方法加载验证按钮
+​
+    ... //其他事件处理
+})
+</script>
 			<!-- Side Catalog Container -->
 			{% if page.catalog %}
 			<div class="col-lg-2 col-lg-offset-0 visible-lg-block sidebar-container catalog-container">
