--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -84,51 +84,9 @@ layout: default
 				</ul>
 
 
-							<!--引入验证插件 -->
-			<style>
-.vaptcha-init-main {
-    display: table;
-    width: 100%;
-    height: 100%;
-    background-color: #eeeeee;
-}
-.vaptcha-init-loading {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-}
-​
-.vaptcha-init-loading > a {
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    border: none;
-}
-​
-.vaptcha-init-loading > a img {
-    vertical-align: middle;
-}
-​
-.vaptcha-init-loading .vaptcha-text {
-    font-family: sans-serif;
-    font-size: 12px;
-    color: #cccccc;
-    vertical-align: middle;
-}
-</style>
-<!-- 点击式按钮建议高度介于36px与46px  -->
-<div id="vaptchaContainer" style="width: 300px;height: 36px;">
-<!--vaptcha-container是用来引入VAPTCHA的容器，下面代码为预加载动画，仅供参考-->
-<div class="vaptcha-init-main">
-    <div class="vaptcha-init-loading">
-    <a href="/" target="_blank">
-        <img src="https://r.vaptcha.net/public/img/vaptcha-loading.gif" />
-    </a>
-    <span class="vaptcha-text">VAPTCHA is initializing...</span>
-    </div>
-</div>
-</div>
-<script src="https://v-cn.vaptcha.com/v3.js"></script>
+							<!--引入验证插件（出大问题-已删除） -->
+
+
 
 				<!--Gitalk评论start  -->
 				{% if site.gitalk.enable %}
